--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
     <div @click="changeVal(b)" style="border:solid;">点击将a的值改变为'b'</div>
 </div>
 </body>
-<script src="mvvm.js"></script>
+<script src="vue2x.js"></script>
 <script>
     let vm = new Vue({
         el: '#app',
